feat: add localization

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "add": "^2.0.6",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
