--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
+    "react-toastify": "^11.0.5",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
